--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "@acme/docs",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "start-storybook -p 6006",
-    "build": "build-storybook --docs",
-    "preview-storybook": "serve storybook-static",
-    "clean": "rm -rf .turbo && rm -rf node_modules"
-  },
-  "dependencies": {
-    "@acme/core": "workspace:0.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@acme/tsconfig": "workspace:0.0.0",
-    "@storybook/addon-actions": "^6.5.14",
-    "@storybook/addon-docs": "^6.5.14",
-    "@storybook/addon-essentials": "^6.5.14",
-    "@storybook/addon-links": "^6.5.14",
-    "@storybook/builder-vite": "^0.1.41",
-    "@storybook/react": "^6.5.14",
-    "@vitejs/plugin-react": "^1.3.2",
-    "eslint-config-acme": "workspace:0.0.0",
-    "serve": "^13.0.4",
-    "typescript": "^4.9.3",
-    "vite": "^2.9.15"
-  }
+	"name": "docs",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"lint": "eslint \"src/**/*.ts\""
+	},
+	"dependencies": {
+		"@kvraamkey/core": "workspace:*",
+		"react": "^18.1.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@kvraamkey/eslint-config-custom": "workspace:*",
+		"@kvraamkey/tsconfig": "workspace:*",
+		"@vitejs/plugin-react": "^4.0.4",
+		"autoprefixer": "^10.4.14",
+		"eslint": "^7.32.0",
+		"postcss": "^8.4.27",
+		"tailwindcss": "^3.3.3",
+		"typescript": "^4.9.4",
+		"vite": "^4.4.8"
+	}
 }
