--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
-    "private": true,
+    "name": "@kvraamkey/react-ui-library",
+    "version": "1.0.0",
+    "homepage": "https://kvraamkey.github.io/react-ui-library/",
+    "author": "Ramki A <kvraamkeydev@gmail.com>",
+    "repositories": [
+        {
+            "type": "git",
+            "url": "git@github.com:kvraamkey/react-ui-library.git"
+        }
+    ],
     "scripts": {
         "build": "turbo run build",
         "dev": "turbo run dev --no-daemon",
