package name changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@kvraamkey/react-ui-library",
+    "name": "react-ui-library",
     "version": "1.0.0",
     "homepage": "https://kvraamkey.github.io/react-ui-library/",
     "author": "Ramki A <kvraamkeydev@gmail.com>",
