--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -24,6 +24,7 @@
         "eslint": "^7.32.0",
         "postcss": "^8.4.27",
         "tailwindcss": "^3.3.3",
+        "tw-colors": "^1.2.6",
         "typescript": "^4.9.4",
         "vite": "^4.4.8"
     }
